# agent-dashboard

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
design/: README.md  ROADMAP.md  VISION.md  glossary.md
design/agent-dx/: README.md
design/decisions/: 0001-library-boundary.md  0002-renderer-as-pure-function.md  0003-action-ref-extension-pattern.md  0004-two-action-lists.md  0005-requires-approval-flag.md  0006-screen-instructions-field.md  0007-screenhub-snapshot-model.md  0008-screenhub-thread-safe-publish.md  0009-screenhub-group-id.md  0010-live-tui-standalone-function.md  0011-no-persistence-protocol.md  0012-serialization-module.md  0013-testing-kit-no-pytest-coupling.md  README.md
design/dx/: README.md  authoring-cookbook.md
design/notes/: README.md  critique-implementation-coverage.md  critique-vision-vs-implementation.md  screen-agent-ux.md
design/proposals/: README.md  boundary.md  critique-r1-problem-framing.md  critique-r2-dx-consistency.md  critique-r3-clarity-structure.md  external-dev-api.md  hub-and-tui.md
examples/: screen_prompt.py  screen_router.py
src/agent_dashboard/: __init__.py  actions.py  hub.py  protocol.py  renderer.py  serialization.py  testing.py  tui.py
tests/: test_actions.py  test_hub.py  test_protocol.py  test_renderer.py  test_serialization.py  test_testing.py  test_tui.py
