[project]
name = "agent-dashboard"
version = "0.1.0"
description = "Data model and renderer for agent workspace screens."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [
    { name = "Daniyar Supiyev", email = "undead.thunderbird@gmail.com" },
]
keywords = ["agent", "llm", "dashboard", "prompt", "ai"]
dependencies = []

[project.urls]
Repository = "https://github.com/uthunderbird/agent-dashboard"

[project.optional-dependencies]
tui = ["rich>=13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_dashboard"]

[tool.pytest.ini_options]
addopts = ["-q"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent_dashboard"]

[tool.mypy]
python_version = "3.14"
strict = true

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "mypy>=1.19",
    "pytest-asyncio>=1.3.0",
    "rich>=13",
]
